--- a/css/style.css
+++ b/css/style.css
@@ -10990,3 +10990,8 @@ input[type=number]::-webkit-inner-spin-button {
     top: -5em !important;
   }
 }
+
+.card-img {
+    width: 13em !important;
+    padding: 1em;
+}
